tests/error/tracing_errors/linear_not_owned1.py
from guppylang.decorator import guppy
from guppylang.std.quantum import qubit, measure


@guppy.comptime
def test(q: qubit) -> None:
    measure(q)


test.compile()
